@@ -43,6 +43,9 @@ o add support for tagged vlan interfaces in the config file, e.g. eth0.1
 o improve alarm framework based on suggestions from Max Kellerman
 
 Max Kellermann <max@duempel.org>:
+
+o fix shadow warnings by renaming variables or making them local
+
 = conntrackd =
 o resolve global variable "alarm" conflict with alarm() function in unistd.h.
 o enable gcc warnings, including -Werror
